# event-registration-attendance

./: .env.template  .gitignore  .htaccess  DEPLOYMENT_GUIDE.md  EMAIL_CONFIGURATION_GUIDE.md  FINAL_COMPLETION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  README.md  STATIC_FILES_GUIDE.md  check_static_files.py  create_package.py  create_simple_ssl.py  database_config.py  deploy.py  generate_ssl_cert.py  manage.py  mobile_https_guide.py  passenger_wsgi.py  pre_deployment_check.py  pyproject.toml  requirements.txt  test_deployment.py  test_email_config.py  test_env.py  test_production.py
checkin/: urls.py  views.py
core/: admin.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_userprofile_avatar_userprofile_bio_and_more.py
event_registration_attendance/: asgi.py  settings.py  settings_production.py  urls.py  wsgi.py
events/: admin.py  forms.py  forms_fixed.py  models.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_eventfield_is_participant_email_and_more.py  0003_event_image.py
static/css/: parish-theme.css
static/js/: qr-scanner-enhanced.js  sw.js
templates/base/: base.html
templates/checkin/: checkin_home.html  participants.html  qr_scanner.html
templates/core/: edit_profile.html  user_profile.html
templates/events/: event_confirm_delete.html  event_detail.html  event_form.html  event_list.html  form_builder.html  participant_list.html  qr_code.html  registration_detail.html  registration_form.html  registration_qr.html  registration_success.html
(+2 files in other folders)
