[project]
name = "event-registration-attendance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-extensions>=4.1",
    "django>=5.2.1",
    "openpyxl>=3.1.5",
    "pillow>=11.2.1",
    "pip>=25.1.1",
    "qrcode[pil]>=8.2",
    "werkzeug>=3.1.3",
    "pyopenssl>=25.1.0",
    "mysqlclient>=2.2.7",
    "python-dotenv>=1.1.0",
]
